--- a/web/src/main/webapp/partials/all_orders.html
+++ b/web/src/main/webapp/partials/all_orders.html
@@ -1,51 +1,21 @@
-
 <H2> All orders</H2>
-<table >
-    <tr ng-repeat="order in orders track by $index">
+<table class="table">
+    <thead>
+    <tr>
+        <th scope="col">State</th>
+        <th scope="col">Date</th>
+        <th scope="col">Price</th>
+        <th scope="col">Detail</th>
+    </tr>
+    </thead>
+    <tbody ng-repeat="order in orders track by $index">
+    <tr>
+        <td>{{order.state}}</td>
+        <td>{{order.dateOfOrder}}</td>
+        <td>{{order.totalPrice}}</td>
         <td>
-            <table>
-
-                <tr>
-                    <td>
-                        <p>Id: </p>
-                    </td>
-                    <td>
-                        <p>{{order.id}}</p>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>
-                        <p>Date of order: </p>
-                    </td>
-                    <td>
-                        <p>{{order.dateOfOrder}}</p>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>
-                        <p>State: </p>
-                    </td>
-                    <td>
-                        <p>{{order.state}}</p>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>
-                        <p>Total price: </p>
-                    </td>
-                    <td>
-                        <p>{{order.totalPrice}}</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a href="#!/order/{{order.id}}"> Details</a>
-                    </td>
-                </tr>
-            </table>
+            <a class="btn btn-primary" target="_blank" href="#!/order/{{order.id}}">Detail</a>
         </td>
     </tr>
+    </tbody>
 </table>
