--- a/web/src/main/webapp/partials/main_page.html
+++ b/web/src/main/webapp/partials/main_page.html
@@ -1,2 +1,8 @@
 <H1> Welcome to Pneuservis</H1>
-<H2>This is our mainpage</H2>
+<H3>We are one of the largest pneu service with a wide range of tires and services. Don´t hesitate and order something!</H3>
+<p>
+    <a href="#!/allTires">Tire offer</a>
+</p>
+<p>
+    <a href="#!/allTires">Service offer</a>
+</p>
