--- a/web/src/main/webapp/partials/all_services.html
+++ b/web/src/main/webapp/partials/all_services.html
@@ -1,51 +1,20 @@
-
 <H2> All services</H2>
-<table >
-    <tr ng-repeat="service in services track by $index">
+<table class="table">
+    <thead>
+    <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Description</th>
+        <th scope="col">Price</th>
+    </tr>
+    </thead>
+    <tbody ng-repeat="service in services track by $index">
+    <tr>
+        <td>{{service.name}}</td>
+        <td>{{service.description}}</td>
+        <td>{{service.price}}</td>
         <td>
-            <table>
-
-                <tr>
-                    <td>
-                        <p>Id: </p>
-                    </td>
-                    <td>
-                        <p>{{service.id}}</p>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>
-                        <p>Name: </p>
-                    </td>
-                    <td>
-                        <p>{{service.name}}</p>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>
-                        <p>Description: </p>
-                    </td>
-                    <td>
-                        <p>{{service.description}}</p>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>
-                        <p>Price: </p>
-                    </td>
-                    <td>
-                        <p>{{service.price}}</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a href="#!/service/{{service.id}}"> Details</a>
-                    </td>
-                </tr>
-            </table>
+            <a class="btn btn-primary" target="_blank" href="#!/service/{{service.id}}">Detail</a>
         </td>
     </tr>
+    </tbody>
 </table>
