Tried to fix Order and User datas + user profile page

--- a/web/src/main/webapp/partials/main_page.html
+++ b/web/src/main/webapp/partials/main_page.html
@@ -4,5 +4,5 @@
     <a href="#!/allTires">Tire offer</a>
 </p>
 <p>
-    <a href="#!/allTires">Service offer</a>
+    <a href="#!/allServices">Service offer</a>
 </p>
