--- a/web/src/main/webapp/partials/all_services.html
+++ b/web/src/main/webapp/partials/all_services.html
@@ -5,6 +5,7 @@
         <th scope="col">Name</th>
         <th scope="col">Description</th>
         <th scope="col">Price</th>
+        <th scope="col">Detail</th>
     </tr>
     </thead>
     <tbody ng-repeat="service in services track by $index">
