--- a/web/src/main/webapp/partials/user_profile.html
+++ b/web/src/main/webapp/partials/user_profile.html
@@ -25,6 +25,7 @@
         <th scope="col">State</th>
         <th scope="col">Date</th>
         <th scope="col">Price</th>
+        <th scope="col">Cancel</th>
         <th scope="col">Detail</th>
     </tr>
     </thead>
@@ -35,6 +36,9 @@
         <td>{{order.totalPrice}}</td>
         <td>
             <button ng-click="deleteOrder(order)" type="submit" class="btn btn-primary">Cancel</button>
+        </td>
+        <td>
+            <a class="btn btn-primary" target="_blank" href="#!/order/{{order.id}}">Detail</a>
         </td>
     </tr>
     </tbody>
