create order is not working due to _links but no we did not totaly overcomplicated that think...

--- a/web/src/main/webapp/partials/all_orders.html
+++ b/web/src/main/webapp/partials/all_orders.html
@@ -14,7 +14,7 @@
         <td>{{order.dateOfOrder}}</td>
         <td>{{order.totalPrice}}</td>
         <td>
-            <a class="btn btn-primary" target="_blank" href="#!/order/{{order.id}}">Detail</a>
+            <a class="btn btn-primary" target="_blank" href="#!/order/edit/{{order.id}}">Detail</a>
         </td>
     </tr>
     </tbody>
