--- a/web/src/main/webapp/partials/order_info.html
+++ b/web/src/main/webapp/partials/order_info.html
@@ -32,6 +32,72 @@
 
     <tr>
         <td>
+            <p>Tires: </p>
+        </td>
+    </tr>
+
+    <tr>
+
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Manufacturer</th>
+                    <th scope="col">Type</th>
+                    <th scope="col">Size</th>
+                    <th scope="col">Season</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Detail</th>
+                </tr>
+                </thead>
+                <tbody ng-repeat="tire in order.tires track by $index">
+                <tr>
+                    <td>{{tire.manufacturer}}</td>
+                    <td>{{tire.type}}</td>
+                    <td>{{tire.size}}</td>
+                    <td>{{tire.season}}</td>
+                    <td>{{tire.price}}</td>
+                    <td>
+                        <a class="btn btn-primary" target="_blank" href="#!/tire/{{tire.id}}">Detail</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+
+    </tr>
+
+    <tr>
+        <td>
+            <p>Services: </p>
+        </td>
+    </tr>
+
+    <tr>
+
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Detail</th>
+                </tr>
+                </thead>
+                <tbody ng-repeat="service in order.services track by $index">
+                <tr>
+                    <td>{{service.name}}</td>
+                    <td>{{service.description}}</td>
+                    <td>{{service.price}}</td>
+                    <td>
+                        <a class="btn btn-primary" target="_blank" href="#!/service/{{service.id}}">Detail</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+
+    </tr>
+
+    <tr>
+        <td>
             <p>Total price: </p>
         </td>
         <td>
