fixed everything + did a backup

--- a/web/src/main/webapp/partials/all_tires.html
+++ b/web/src/main/webapp/partials/all_tires.html
@@ -19,10 +19,10 @@
             <td>{{tire.season}}</td>
             <td>{{tire.price}}</td>
             <td>
-                <a class="btn btn-primary" target="_blank" href="#!/tire/{{tire.id}}">Detail</a>
+                <a class="btn btn-primary"  href="#!/tire/{{tire.id}}">Detail</a>
             </td>
             <td>
-                <a class="btn btn-primary" target="_blank" href="#!/tire/{{tire.id}}">Edit</a>
+                <a class="btn btn-primary"  href="#!/tire/edit/{{tire.id}}">Edit</a>
             </td>
         </tr>
     </tbody>
