--- a/web/src/main/webapp/partials/create_order.html
+++ b/web/src/main/webapp/partials/create_order.html
@@ -17,7 +17,7 @@
         <td>{{service.description}}</td>
         <td>{{service.price}}</td>
         <td>
-            <a class="btn btn-primary" target="_blank" ng-click="removeService(service)">Remove</a>
+            <a class="btn btn-primary"  ng-click="removeService(service)">Remove</a>
         </td>
     </tr>
     </tbody>
@@ -43,7 +43,7 @@
             <td>{{tire.season}}</td>
             <td>{{tire.price}}</td>
             <td>
-                <a class="btn btn-primary" target="_blank" ng-click="removeTire(tire)">Remove</a>
+                <a class="btn btn-primary"  ng-click="removeTire(tire)">Remove</a>
             </td>
         </tr>
     </tbody>
@@ -72,7 +72,7 @@
         <td>{{service.description}}</td>
         <td>{{service.price}}</td>
         <td>
-            <a class="btn btn-primary" target="_blank" ng-click="addService(service)">Addl</a>
+            <a class="btn btn-primary"  ng-click="addService(service)">Addl</a>
         </td>
     </tr>
     </tbody>
@@ -98,7 +98,7 @@
             <td>{{tire.season}}</td>
             <td>{{tire.price}}</td>
             <td>
-                <a class="btn btn-primary" target="_blank" ng-click="addTire(tire)">Add</a>
+                <a class="btn btn-primary"  ng-click="addTire(tire)">Add</a>
             </td>
         </tr>
 	</tbody>
