--- a/web/src/main/webapp/partials/user_profile.html
+++ b/web/src/main/webapp/partials/user_profile.html
@@ -38,7 +38,7 @@
             <button ng-click="deleteOrder(order)" type="submit" class="btn btn-primary">Cancel</button>
         </td>
         <td>
-            <a class="btn btn-primary" target="_blank" href="#!/order/{{order.id}}">Detail</a>
+            <a class="btn btn-primary" href="#!/order/{{order.id}}">Detail</a>
         </td>
     </tr>
     </tbody>
@@ -47,7 +47,7 @@
 <H3>Cars</H3>
 
 <td>
-    <a class="btn btn-primary" target="_blank" href="#!/createCar">Add car</a>
+    <a class="btn btn-primary" href="#!/createCar">Add car</a>
 </td>
 
 <table class="table">
