--- a/web/src/main/webapp/partials/car_create.html
+++ b/web/src/main/webapp/partials/car_create.html
@@ -6,15 +6,9 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="model" class="col-sm-2 control-label">Password</label>
+        <label for="model" class="col-sm-2 control-label">Model</label>
         <div class="col-sm-10">
             <input placeholder="" id="model" type="text" name="model" class="form-control" ng-model="car.model" required/>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="tireType" class="col-sm-2 control-label">Password</label>
-        <div class="col-sm-10">
-            <input placeholder="" id="tireType" type="text" name="tireType" class="form-control" ng-model="car.tireType" required/>
         </div>
     </div>
     <!-- show disabled button if form is not valid -->
