Updated user of address and telephone attributes.

--- a/web/src/main/webapp/partials/user_info.html
+++ b/web/src/main/webapp/partials/user_info.html
@@ -28,6 +28,22 @@
 			<p>{{user.isAdmin}}</p>
 		</td>
 	</tr>
+	<tr>
+		<td>
+			<p>Address</p>
+		</td>
+		<td>
+			<p>{{user.userAddress}}</p>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<p>Telephone</p>
+		</td>
+		<td>
+			<p>{{user.telephone}}</p>
+		</td>
+	</tr>
 </table>
 
 <div>
