--- a/web/src/main/webapp/partials/create_order.html
+++ b/web/src/main/webapp/partials/create_order.html
@@ -17,7 +17,7 @@
         <td>{{service.description}}</td>
         <td>{{service.price}}</td>
         <td>
-            <a class="btn btn-primary"  ng-click="removeService(service)">Remove</a>
+            <a class="btn btn-primary" ng-click="removeService(service)">Remove</a>
         </td>
     </tr>
     </tbody>
@@ -26,29 +26,29 @@
 <H3> Selected tires</H3>
 <table class="table">
     <thead>
-        <tr>
-            <th scope="col">Manufacturer</th>
-            <th scope="col">Type</th>
-            <th scope="col">Size</th>
-            <th scope="col">Season</th>
-            <th scope="col">Price</th>
-            <th scope="col"></th>
-        </tr>
+    <tr>
+        <th scope="col">Manufacturer</th>
+        <th scope="col">Type</th>
+        <th scope="col">Size</th>
+        <th scope="col">Season</th>
+        <th scope="col">Price</th>
+        <th scope="col"></th>
+    </tr>
     </thead>
     <tbody ng-repeat="tire in order.tires track by $index">
-        <tr>
-            <td>{{tire.manufacturer}}</td>
-            <td>{{tire.type}}</td>
-            <td>{{tire.size}}</td>
-            <td>{{tire.season}}</td>
-            <td>{{tire.price}}</td>
-            <td>
-                <a class="btn btn-primary"  ng-click="removeTire(tire)">Remove</a>
-            </td>
-        </tr>
+    <tr>
+        <td>{{tire.manufacturer}}</td>
+        <td>{{tire.type}}</td>
+        <td>{{tire.size}}</td>
+        <td>{{tire.season}}</td>
+        <td>{{tire.price}}</td>
+        <td>
+            <a class="btn btn-primary" ng-click="removeTire(tire)">Remove</a>
+        </td>
+    </tr>
     </tbody>
 </table>
-  <button class="btn btn-primary" type="submit" ng-click="create(order)">Create order</button>
+<button class="btn btn-primary" type="submit" ng-click="create(order)">Create order</button>
 
 <br>
 <br>
@@ -72,7 +72,7 @@
         <td>{{service.description}}</td>
         <td>{{service.price}}</td>
         <td>
-            <a class="btn btn-primary"  ng-click="addService(service)">Addl</a>
+            <a class="btn btn-primary" ng-click="addService(service)">Add</a>
         </td>
     </tr>
     </tbody>
@@ -81,27 +81,27 @@
 <H3> Add tire</H3>
 <table class="table">
     <thead>
-        <tr>
-            <th scope="col">Manufacturer</th>
-            <th scope="col">Type</th>
-            <th scope="col">Size</th>
-            <th scope="col">Season</th>
-            <th scope="col">Price</th>
-            <th scope="col"></th>
-        </tr>
+    <tr>
+        <th scope="col">Manufacturer</th>
+        <th scope="col">Type</th>
+        <th scope="col">Size</th>
+        <th scope="col">Season</th>
+        <th scope="col">Price</th>
+        <th scope="col"></th>
+    </tr>
     </thead>
     <tbody ng-repeat="tire in tires track by $index">
-        <tr>
-            <td>{{tire.manufacturer}}</td>
-            <td>{{tire.type}}</td>
-            <td>{{tire.size}}</td>
-            <td>{{tire.season}}</td>
-            <td>{{tire.price}}</td>
-            <td>
-                <a class="btn btn-primary"  ng-click="addTire(tire)">Add</a>
-            </td>
-        </tr>
-	</tbody>
+    <tr>
+        <td>{{tire.manufacturer}}</td>
+        <td>{{tire.type}}</td>
+        <td>{{tire.size}}</td>
+        <td>{{tire.season}}</td>
+        <td>{{tire.price}}</td>
+        <td>
+            <a class="btn btn-primary" ng-click="addTire(tire)">Add</a>
+        </td>
+    </tr>
+    </tbody>
 </table>
 
 
