I can create an empty order #104 fixed No page reload after the order has been deleted #103 + fixed delete order No constraints #24 fixed

--- a/web/src/main/webapp/partials/all_tires.html
+++ b/web/src/main/webapp/partials/all_tires.html
@@ -25,7 +25,7 @@
                 <a class="btn btn-primary"  href="#!/tire/edit/{{tire.id}}">Edit</a>
             </td>
             <td>
-                <a class="btn btn-primary" target="_blank" href="#!/tire/{{tire.id}}">Edit</a>
+                <a class="btn btn-primary"  ng-click="deleteTire(tire)"">Delete</a>
             </td>
         </tr>
     </tbody>
