--- a/web/src/main/webapp/partials/create_order.html
+++ b/web/src/main/webapp/partials/create_order.html
@@ -84,7 +84,7 @@
     <tr>
         <th scope="col">Manufacturer</th>
         <th scope="col">Type</th>
-        <th scope="col">Size</th>
+        <th scope="col">Size</th>delete
         <th scope="col">Season</th>
         <th scope="col">Price</th>
         <th scope="col"></th>
