--- a/web/src/main/webapp/partials/user_register.html
+++ b/web/src/main/webapp/partials/user_register.html
@@ -26,6 +26,26 @@
         	<p class="help-block" ng-show="form.password.$error.maxlength">password can't be longer then 32 characters</p>
         </div>
     </div> 
+    
+        <div class="form-arddress" ng-class="{'has-error': !(form.login.$valid)}">
+        <label for="login" class="col-sm-2 control-label">Arddess</label>
+        <div class="col-sm-10">
+            <input placeholder="" id="password" type="text" name="userAddress" class="form-control" ng-model="user.userAddress" required/>
+            <p class="help-block" ng-show="form.address.$error.required">address is required</p>
+        </div>
+    </div> 
+    
+        <div class="form-group" ng-class="{'has-error': !(form.login.$valid)}">
+        <label for="login" class="col-sm-2 control-label">Telephone</label>
+        <div class="col-sm-10">
+            <input placeholder="" id="telephone" type="text" name="telephone" class="form-control" ng-model="user.telephone" required/>
+            <p class="help-block" ng-show="form.teleohone.$error.required">telephone is required</p>
+        </div>
+    </div> 
+    
+    
+    
+    
     <!-- show disabled button if form is not valid -->
     <button ng-disabled="!form.$valid" class="btn btn-primary" type="submit" ng-click="create(user)">Create user</button>
 </form>
