--- a/web/src/main/webapp/partials/tire_info.html
+++ b/web/src/main/webapp/partials/tire_info.html
@@ -1,63 +1,26 @@
 <H2> Tire info</H2>
-<h3>ID# {{tire.id}}</h3>
 
-<table>
-
+<table class="table">
+    <thead>
     <tr>
+        <th scope="col">Manufacturer</th>
+        <th scope="col">Type</th>
+        <th scope="col">Size</th>
+        <th scope="col">Season</th>
+        <th scope="col">Price</th>
+        <th scope="col">Action</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>{{tire.manufacturer}}</td>
+        <td>{{tire.type}}</td>
+        <td>{{tire.size}}</td>
+        <td>{{tire.season}}</td>
+        <td>{{tire.price}}</td>
         <td>
-            <p>Id: </p>
-        </td>
-        <td>
-            <p>{{tire.id}}</p>
+            <button ng-click="removeTire(tire)" type="submit" class="btn btn-danger">Delete</button>
         </td>
     </tr>
-
-    <tr>
-        <td>
-            <p>Manufacturer: </p>
-        </td>
-        <td>
-            <p>{{tire.manufacturer}}</p>
-        </td>
-    </tr>
-
-    <tr>
-        <td>
-            <p>Type: </p>
-        </td>
-        <td>
-            <p>{{tire.type}}</p>
-        </td>
-    </tr>
-
-    <tr>
-        <td>
-            <p>Size: </p>
-        </td>
-        <td>
-            <p>{{tire.size}}</p>
-        </td>
-    </tr>
-
-    <tr>
-        <td>
-            <p>Season: </p>
-        </td>
-        <td>
-            <p>{{tire.season}}</p>
-        </td>
-    </tr>
-
-    <tr>
-        <td>
-            <p>Price: </p>
-        </td>
-        <td>
-            <p>{{tire.price}}</p>
-        </td>
-    </tr>
+    </tbody>
 </table>
-
-<div>
-    <button ng-click="removeTire(tire)" type="submit" class="btn btn-primary">Delete</button>
-</div>
