--- a/web/src/main/webapp/partials/all_users.html
+++ b/web/src/main/webapp/partials/all_users.html
@@ -18,10 +18,7 @@
 			<a class="btn btn-primary"  href="#!/user/{{user.id}}">Detail</a>
 		</td>
 		<td>
-			<a class="btn btn-primary" href="#!/user//edit{{user.id}}">Edit</a>
-		</td>
-		<td>
-			<a class="btn btn-primary" target="_blank" href="#!/user/{{user.id}}">Edit</a>
+			<a class="btn btn-success" href="#!/user/edit{{user.id}}">Edit</a>
 		</td>
 	</tr>
 	</tbody>
