--- a/web/src/main/webapp/partials/user_profile.html
+++ b/web/src/main/webapp/partials/user_profile.html
@@ -35,7 +35,7 @@
         <td>{{order.dateOfOrder}}</td>
         <td>{{order.totalPrice}}</td>
         <td>
-            <button ng-click="deleteOrder(order)" type="submit" class="btn btn-primary">Cancel</button>
+            <button ng-click="deleteOrder(order)" type="submit" class="btn btn-danger">Cancel</button>
         </td>
         <td>
             <a class="btn btn-primary" href="#!/order/{{order.id}}">Detail</a>
@@ -48,7 +48,7 @@
 <H3>Cars</H3>
 
 <td>
-    <a class="btn btn-primary" href="#!/createCar">Add car</a>
+    <a class="btn btn-success" href="#!/createCar">Add car</a>
 
 </td>
 
