--- a/web/src/main/webapp/partials/all_tires.html
+++ b/web/src/main/webapp/partials/all_tires.html
@@ -26,7 +26,7 @@
                 <a class="btn btn-success"  href="#!/tire/edit/{{tire.id}}">Edit</a>
             </td>
             <td>
-                <a class="btn btn-danger"  ng-click="deleteTire(tire)">Delete</a>
+                <button ng-click="deleteTire(tire)" type="submit" class="btn btn-danger">Delete</button>
             </td>
         </tr>
     </tbody>
