--- a/web/src/main/webapp/partials/all_cars.html
+++ b/web/src/main/webapp/partials/all_cars.html
@@ -5,6 +5,7 @@
 		<th scope="col">Licence plate</th>
 		<th scope="col">Model</th>
 		<th scope="col">Tire type</th>
+		<th scope="col">Delete</th>
 	</tr>
 	</thead>
 	<tbody ng-repeat="car in cars track by $index">
@@ -12,6 +13,9 @@
 		<td>{{car.licencePlate}}</td>
 		<td>{{car.model}}</td>
 		<td>{{car.tireType}}</td>
+		<td>
+			<button ng-click="deleteCar(car)" type="submit" class="btn btn-danger">Delete</button>
+		</td>
 	</tr>
 	</tbody>
 </table>
