--- a/web/src/main/webapp/partials/all_tires.html
+++ b/web/src/main/webapp/partials/all_tires.html
@@ -1,4 +1,13 @@
 <H2>All tires</H2>
+
+<br>
+
+<td>
+    <a class="btn btn-success" href="#!/createTire">Add tire</a>
+</td>
+
+<br>
+
 <table class="table">
     <thead>
         <tr>
