--- a/web/src/main/webapp/partials/all_services.html
+++ b/web/src/main/webapp/partials/all_services.html
@@ -1,4 +1,5 @@
 <H2>All services</H2>
+
 <table class="table">
     <thead>
     <tr>
@@ -6,7 +7,6 @@
         <th scope="col">Description</th>
         <th scope="col">Price</th>
         <th scope="col">Detail</th>
-        <th scope="col">Edit</th>
         <th scope="col">Delete</th>
     </tr>
     </thead>
@@ -19,11 +19,14 @@
             <a class="btn btn-primary"  href="#!/service/{{service.id}}">Detail</a>
         </td>
         <td>
-            <a class="btn btn-success"  href="#!/service/edit/{{service.id}}">Edit</a>
-        </td>
-        <td>
             <button ng-click="deleteService(service)" type="submit" class="btn btn-danger">Delete</button>
         </td>
     </tr>
     </tbody>
 </table>
+
+<br>
+
+<td>
+    <a class="btn btn-success" href="#!/createService">Create a new service</a>
+</td>
