--- a/web/src/main/webapp/partials/all_tires.html
+++ b/web/src/main/webapp/partials/all_tires.html
@@ -1,13 +1,5 @@
 <H2>All tires</H2>
 
-<br>
-
-<td>
-    <a class="btn btn-success" href="#!/createTire">Add tire</a>
-</td>
-
-<br>
-
 <table class="table">
     <thead>
         <tr>
@@ -17,7 +9,6 @@
             <th scope="col">Season</th>
             <th scope="col">Price</th>
             <th scope="col">Detail</th>
-            <th scope="col">Edit</th>
             <th scope="col">Delete</th>
         </tr>
     </thead>
@@ -32,11 +23,14 @@
                 <a class="btn btn-primary"  href="#!/tire/{{tire.id}}">Detail</a>
             </td>
             <td>
-                <a class="btn btn-success"  href="#!/tire/edit/{{tire.id}}">Edit</a>
-            </td>
-            <td>
                 <button ng-click="deleteTire(tire)" type="submit" class="btn btn-danger">Delete</button>
             </td>
         </tr>
     </tbody>
 </table>
+
+<br>
+
+<td>
+    <a class="btn btn-success" href="#!/createTire">Create a new tire</a>
+</td>
