--- a/web/src/main/webapp/partials/tire_create.html
+++ b/web/src/main/webapp/partials/tire_create.html
@@ -1,39 +1,48 @@
 <form name="form"  novalidate class="form-horizontal">
-    <div class="form-group" >
+    <div class="form-group" ng-class="{'has-error': !(form.manufacturer.$valid)}">
         <label for="manufacturer" class="col-sm-2 control-label">Manufacturer</label>
         <div class="col-sm-10">
-            <input placeholder="" id="manufacturer" type="text"  name="manufacturer" class="form-control" ng-model="tire.manufacturer" required/>
+            <input placeholder="manufacturer" id="manufacturer" type="text" ng-minlength="3" name="manufacturer" class="form-control" ng-model="tire.manufacturer" required/>
+            <p class="help-block" ng-show="form.manufacturer.$error.required">manufacturer is required</p>
+            <p class="help-block" ng-show="form.manufacturer.$error.minlength">manufacturer must be at least 3 characters</p>
         </div>
     </div>
 
-    <div class="form-group">
+    <div class="form-group" ng-class="{'has-error': !(form.type.$valid)}">
         <label for="type" class="col-sm-2 control-label">Type</label>
         <div class="col-sm-10">
-            <input placeholder="" id="type" type="text" name="type" class="form-control" ng-model="tire.type" required/>
+            <input placeholder="type" id="type" type="text" ng-minlength="3" name="type" class="form-control" ng-model="tire.type" required/>
+            <p class="help-block" ng-show="form.manufacturer.$error.required">type is required</p>
+            <p class="help-block" ng-show="form.manufacturer.$error.minlength">type must be at least 3 characters</p>
         </div>
     </div>
 
-    <div class="form-group">
+    <div class="form-group" ng-class="{'has-error': !(form.size.$valid)}" >
         <label for="size" class="col-sm-2 control-label">Size</label>
         <div class="col-sm-10">
-            <input placeholder="" id="size" type="number" name="size" class="form-control" ng-model="tire.size" required/>
+            <input type="number" min="1" integer required id="size" name="size" class="form-control" ng-model="tire.size"/>
+            <p class="help-block" ng-show="form.price.$error.required">size is required</p>
+            <p class="help-block" ng-show="form.price.$error.min">size greater than zero is required</p>
         </div>
     </div>
 
-    <div class="form-group">
+    <div class="form-group" ng-class="{'has-error': !(form.season.$valid)}">
         <label for="season" class="col-sm-2 control-label">Season</label>
         <div class="col-sm-10">
-            <input placeholder="" id="season" type="text" name="season" class="form-control" ng-model="tire.season" required/>
+            <input placeholder="season" id="season" type="text" ng-minlength="3" name="season" class="form-control" ng-model="tire.season" required/>
+            <p class="help-block" ng-show="form.manufacturer.$error.required">season is required</p>
+            <p class="help-block" ng-show="form.manufacturer.$error.minlength">season must be at least 3 characters</p>
         </div>
     </div>
 
-    <div class="form-group">
+    <div class="form-group" ng-class="{'has-error': !(form.price.$valid)}" >
         <label for="price" class="col-sm-2 control-label">Price</label>
         <div class="col-sm-10">
-            <input placeholder="" id="price" type="number" name="price" class="form-control" ng-model="tire.price" required/>
+            <input type="number" min="1" integer required id="price" name="price" class="form-control" ng-model="tire.price" />
+            <p class="help-block" ng-show="form.price.$error.required">price is required</p>
+            <p class="help-block" ng-show="form.price.$error.min">price greater than zero is required</p>
         </div>
     </div>
-
 
     <!-- show disabled button if form is not valid -->
     <button  class="btn btn-primary" type="submit" ng-click="create(tire)">Create tire</button>
