--- a/web/src/main/webapp/partials/car_create.html
+++ b/web/src/main/webapp/partials/car_create.html
@@ -2,7 +2,10 @@
     <div class="form-group" >
         <label for="licencePlate" class="col-sm-2 control-label">Licence plate</label>
         <div class="col-sm-10">
-            <input placeholder="" id="licencePlate" type="text"  name="licencePlate" class="form-control" ng-model="car.licencePlate" required/>
+            <input placeholder="" id="licencePlate" ng-minlength="4" ng-maxlength="20" type="text"  name="licencePlate" class="form-control" ng-model="car.licencePlate" required/>
+        	<p class="help-block" ng-show="form.licencePlate.$error.required">name is required</p>
+            <p class="help-block" ng-show="form.licencePlate.$error.minlength">name must be at least 4 characters</p>
+        	<p class="help-block" ng-show="form.licencePlate.$error.maxlength">name can't be longer then 20 characters</p>
         </div>
     </div>
     <div class="form-group">
