--- a/web/src/main/webapp/partials/car_create.html
+++ b/web/src/main/webapp/partials/car_create.html
@@ -3,9 +3,9 @@
         <label for="licencePlate" class="col-sm-2 control-label">Licence plate</label>
         <div class="col-sm-10">
             <input placeholder="" id="licencePlate" ng-minlength="4" ng-maxlength="20" type="text"  name="licencePlate" class="form-control" ng-model="car.licencePlate" required/>
-        	<p class="help-block" ng-show="form.licencePlate.$error.required">name is required</p>
-            <p class="help-block" ng-show="form.licencePlate.$error.minlength">name must be at least 4 characters</p>
-        	<p class="help-block" ng-show="form.licencePlate.$error.maxlength">name can't be longer then 20 characters</p>
+        	<p class="help-block" ng-show="form.licencePlate.$error.required">Licence plate is required</p>
+            <p class="help-block" ng-show="form.licencePlate.$error.minlength">Licence plate must be at least 4 characters</p>
+        	<p class="help-block" ng-show="form.licencePlate.$error.maxlength">Licence plate can't be longer then 20 characters</p>
         </div>
     </div>
     <div class="form-group">
@@ -15,6 +15,7 @@
             <input placeholder="" id="model" type="text" name="model" class="form-control" ng-model="car.model" required/>
         </div>
     </div>
+
     <!-- show disabled button if form is not valid -->
     <button  class="btn btn-primary" type="submit" ng-click="create(car)">Create car</button>
 </form>
