--- a/web/src/main/webapp/partials/tire_create.html
+++ b/web/src/main/webapp/partials/tire_create.html
@@ -4,7 +4,7 @@
         <div class="col-sm-10">
             <input placeholder="manufacturer" id="manufacturer" type="text" ng-minlength="3" name="manufacturer" class="form-control" ng-model="tire.manufacturer" required/>
             <p class="help-block" ng-show="form.manufacturer.$error.required">manufacturer is required</p>
-            <p class="help-block" ng-show="form.manufacturer.$error.minlength">manufacturer must be at least 3 characters</p>
+            <p class="help-block" ng-show="form.manufacturer.$error.minlength">manufacturer must be at least 3 characters long</p>
         </div>
     </div>
 
@@ -13,7 +13,7 @@
         <div class="col-sm-10">
             <input placeholder="type" id="type" type="text" ng-minlength="3" name="type" class="form-control" ng-model="tire.type" required/>
             <p class="help-block" ng-show="form.manufacturer.$error.required">type is required</p>
-            <p class="help-block" ng-show="form.manufacturer.$error.minlength">type must be at least 3 characters</p>
+            <p class="help-block" ng-show="form.manufacturer.$error.minlength">type must be at least 3 characters long</p>
         </div>
     </div>
 
