added support of car tire type attribute

--- a/web/src/main/webapp/partials/user_profile.html
+++ b/web/src/main/webapp/partials/user_profile.html
@@ -1,5 +1,7 @@
 <H2>User profile</H2>
 
+<br>
+
 <table class="table">
     <thead>
     <tr>
@@ -16,6 +18,8 @@
     </tr>
     </tbody>
 </table>
+
+<br>
 
 <H3>Orders</H3>
 
@@ -45,11 +49,9 @@
     </tbody>
 </table>
 
-<H3>Cars</H3>
+<br>
 
-<td>
-    <a class="btn btn-success" href="#!/createCar">Add car</a>
-</td>
+<H3>Cars</H3>
 
 <table class="table">
     <thead>
@@ -67,3 +69,7 @@
     </tr>
     </tbody>
 </table>
+
+<td>
+    <a class="btn btn-success" href="#!/createCar">Add a new car</a>
+</td>
