--- a/web/src/main/webapp/partials/car_create.html
+++ b/web/src/main/webapp/partials/car_create.html
@@ -8,11 +8,21 @@
         	<p class="help-block" ng-show="form.licencePlate.$error.maxlength">Licence plate can't be longer then 20 characters</p>
         </div>
     </div>
+
     <div class="form-group">
         <label for="model" class="col-sm-2 control-label">Model</label>
 
         <div class="col-sm-10">
             <input placeholder="" id="model" type="text" name="model" class="form-control" ng-model="car.model" required/>
+            <p class="help-block" ng-show="form.model.$error.required">Model is required</p>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label for="tireType" class="col-sm-2 control-label">Tire type</label>
+        <div class="col-sm-10">
+            <input placeholder="" id="tireType" type="text" name="tireType" class="form-control" ng-model="car.tireType" required/>
+            <p class="help-block" ng-show="form.model.$error.required">Tire type is required</p>
         </div>
     </div>
 
