--- a/web/src/main/webapp/partials/user_register.html
+++ b/web/src/main/webapp/partials/user_register.html
@@ -11,40 +11,37 @@
     <div class="form-group" ng-class="{'has-error': !(form.login.$valid)}">
         <label for="login" class="col-sm-2 control-label">Login</label>
         <div class="col-sm-10">
-            <input placeholder="login" id="login" type="text" ng-minlength="8" ng-maxlength="32" name="login" class="form-control" ng-model="user.login" required/>
+            <input placeholder="login" id="login" type="text" ng-minlength="5" ng-maxlength="32" name="login" class="form-control" ng-model="user.login" required/>
             <p class="help-block" ng-show="form.login.$error.required">login is required</p>
-            <p class="help-block" ng-show="form.login.$error.minlength">login must be at least 8 characters</p>
+            <p class="help-block" ng-show="form.login.$error.minlength">login must be at least 5 characters</p>
         	<p class="help-block" ng-show="form.login.$error.maxlength">login can't be longer then 32 characters</p>
         </div>
     </div>
-    <div class="form-group" ng-class="{'has-error': !(form.login.$valid)}">
-        <label for="login" class="col-sm-2 control-label">Password</label>
+    <div class="form-group" ng-class="{'has-error': !(form.password.$valid)}">
+        <label for="password" class="col-sm-2 control-label">Password</label>
         <div class="col-sm-10">
-            <input placeholder="" id="password" type="password" ng-minlength="8" ng-maxlength="32" name="password" class="form-control" ng-model="user.password" required/>
+            <input placeholder="" id="password" type="password" ng-minlength="5" ng-maxlength="32" name="password" class="form-control" ng-model="user.password" required/>
             <p class="help-block" ng-show="form.password.$error.required">password is required</p>
-            <p class="help-block" ng-show="form.password.$error.minlength">password must be at least 8 characters</p>
+            <p class="help-block" ng-show="form.password.$error.minlength">password must be at least 5 characters</p>
         	<p class="help-block" ng-show="form.password.$error.maxlength">password can't be longer then 32 characters</p>
         </div>
     </div> 
     
-        <div class="form-arddress" ng-class="{'has-error': !(form.login.$valid)}">
-        <label for="login" class="col-sm-2 control-label">Arddess</label>
+        <div class="form-group" ng-class="{'has-error': !(form.userAddress.$valid)}">
+        <label for="userAddress" class="col-sm-2 control-label">Address</label>
         <div class="col-sm-10">
-            <input placeholder="" id="password" type="text" name="userAddress" class="form-control" ng-model="user.userAddress" required/>
-            <p class="help-block" ng-show="form.address.$error.required">address is required</p>
+            <input placeholder="" id="userAddress" type="text" name="userAddress" class="form-control" ng-model="user.userAddress" required/>
+            <p class="help-block" ng-show="form.userAddress.$error.required">address is required</p>
         </div>
     </div> 
     
-        <div class="form-group" ng-class="{'has-error': !(form.login.$valid)}">
-        <label for="login" class="col-sm-2 control-label">Telephone</label>
+        <div class="form-group" ng-class="{'has-error': !(form.telephone.$valid)}">
+        <label for="telephone" class="col-sm-2 control-label">Telephone</label>
         <div class="col-sm-10">
             <input placeholder="" id="telephone" type="text" name="telephone" class="form-control" ng-model="user.telephone" required/>
-            <p class="help-block" ng-show="form.teleohone.$error.required">telephone is required</p>
+            <p class="help-block" ng-show="form.telephone.$error.required">telephone is required</p>
         </div>
-    </div> 
-    
-    
-    
+    </div>
     
     <!-- show disabled button if form is not valid -->
     <button ng-disabled="!form.$valid" class="btn btn-primary" type="submit" ng-click="create(user)">Create user</button>
