modified main page

--- a/web/src/main/webapp/partials/main_page.html
+++ b/web/src/main/webapp/partials/main_page.html
@@ -1,8 +1,8 @@
-<H1> Welcome to Pneuservis</H1>
+<H1 style="text-align: center;"> Welcome to Pneuservis</H1>
 <H3>We are one of the largest pneu service with a wide range of tires and services. Don´t hesitate and order something!</H3>
 <p>
-    <a href="#!/allTires">Tire offer</a>
+    <a href="#!/tires_all">Tire offer</a>
 </p>
 <p>
-    <a href="#!/allServices">Service offer</a>
+    <a href="#!/services_all">Service offer</a>
 </p>
