--- a/web/src/main/webapp/partials/user_profile.html
+++ b/web/src/main/webapp/partials/user_profile.html
@@ -59,13 +59,15 @@
         <th scope="col">Licence plate</th>
         <th scope="col">Model</th>
         <th scope="col">Tire type</th>
-    </tr>
+        </tr>
     </thead>
     <tbody ng-repeat="car in cars track by $index">
     <tr>
         <td>{{car.licencePlate}}</td>
         <td>{{car.model}}</td>
         <td>{{car.tireType}}</td>
+        <td> <button ng-click="deleteCar(car)" type="submit" class="btn btn-danger">Remove</button></td>
+    
     </tr>
     </tbody>
 </table>
